New samples environment

--- a/vtl-bundles/vtl-bundle-deps/pom.xml
+++ b/vtl-bundles/vtl-bundle-deps/pom.xml
@@ -140,6 +140,10 @@
 		</dependency>
 		<dependency>
 			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-envsamples</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
 			<artifactId>vtl-metadb</artifactId>
 		</dependency>
 		<dependency>
