--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
 				<module>vtl-envs</module>
 				<module>vtl-meta</module>
 				<module>vtl-parser</module>
+				<module>vtl-samples</module>
 				<module>vtl-session</module>
 				<module>vtl-transform</module>
 				<module>vtl-types</module>
@@ -231,8 +232,7 @@
 	</profiles>
 
 	<properties>
-		<revision>1.1.2</revision>
-		<sdmx.version>3.0.6</sdmx.version>
+		<revision>1.1.4-SNAPSHOT</revision>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
@@ -249,24 +249,23 @@
 		<scala.compat.version>2.13</scala.compat.version>
 		<scala-compiler.version>4.8.1</scala-compiler.version>
 		<spark.version>3.5.0</spark.version>
-		<tycho.version>4.0.0</tycho.version>
-		<slf4j.version>2.0.7</slf4j.version>
+		<slf4j.version>2.0.11</slf4j.version>
 		<picocli.version>4.7.5</picocli.version>
-		<log4j.version>2.20.0</log4j.version>
+		<log4j.version>2.22.1</log4j.version>
 		<jetty.version>10.0.18</jetty.version>
 		<jackson.version>2.15.2</jackson.version>
 		<jaxb.version>4.0.1</jaxb.version>
 		<jaxb.runtime.version>4.0.3</jaxb.runtime.version>
 		<junit.version>5.10.0</junit.version>
 		<junit-jupiter.version>${junit.version}</junit-jupiter.version>
-		<mockito.version>5.2.0</mockito.version>
-		<mockito-inline.version>${mockito.version}</mockito-inline.version>
+		<mockito.version>5.9.0</mockito.version>
+		<mockito-inline.version>5.2.0</mockito-inline.version>
 		<thymeleaf.version>3.1.2.RELEASE</thymeleaf.version>
-		<build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
+		<build-helper-maven-plugin.version>3.5.0</build-helper-maven-plugin.version>
 		<spring.boot.version>2.7.13</spring.boot.version>
 		<node.version>v10.20.1</node.version>
 		<antlr4.version>4.8</antlr4.version>
-		<io.sdmx.version>1.0.48</io.sdmx.version>
+		<io.sdmx.version>1.0.54</io.sdmx.version>
 		<guava.version>30.1.1-jre</guava.version>
 		<scmUrl>https://github.com/vpinna80/VTL</scmUrl>
 		<siteUrl>https://vpinna80.github.io/VTL</siteUrl>
@@ -376,6 +375,21 @@
 			</dependency>
 			<dependency>
 				<groupId>it.bancaditalia.oss.vtl</groupId>
+				<artifactId>vtl-confman</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>it.bancaditalia.oss.vtl</groupId>
+				<artifactId>vtl-envsamples</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>it.bancaditalia.oss.vtl</groupId>
+				<artifactId>vtl-renv</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>it.bancaditalia.oss.vtl</groupId>
 				<artifactId>vtl-rest</artifactId>
 				<type>war</type>
 				<version>${project.version}</version>
@@ -407,6 +421,11 @@
 			</dependency>
 			<dependency>
 				<groupId>it.bancaditalia.oss.vtl</groupId>
+				<artifactId>vtl-samples</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>it.bancaditalia.oss.vtl</groupId>
 				<artifactId>vtl-session</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -414,11 +433,6 @@
 				<groupId>it.bancaditalia.oss.vtl</groupId>
 				<artifactId>vtl-spark</artifactId>
 				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>it.bancaditalia.oss</groupId>
-				<artifactId>sdmx</artifactId>
-				<version>${sdmx.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
