--- a/vtl-bundles/pom.xml
+++ b/vtl-bundles/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!--
 
     Copyright © 2020 Banca D'Italia
@@ -7,8 +7,7 @@
     You may not use this work except in compliance with the
     License.
     You may obtain a copy of the License at:
-
-    https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt
+https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt
 
     Unless required by applicable law or agreed to in
     writing, software distributed under the License is
@@ -63,16 +62,21 @@
 			</modules>
 		</profile>
 		<profile>
-			<id>with-eclipse</id>
+			<id>in-eclipse</id>
+			<activation>
+				<property>
+					<name>m2e.version</name>
+				</property>
+			</activation>
 			<modules>
-				<module>vtl-eclipse</module>
+				<module>vtl-integration-tests</module>
 			</modules>
 		</profile>
 	</profiles>
 
+
 	<modules>
 		<module>vtl-bundle-deps</module>
-		<module>vtl-integration-tests</module>
 		<module>vtl-coverage</module>
 	</modules>
 </project>
