--- a/vtl-bundles/vtl-cli/pom.xml
+++ b/vtl-bundles/vtl-cli/pom.xml
@@ -115,15 +115,39 @@
 				<configuration>
 					<shadedClassifierName>complete</shadedClassifierName>
 					<shadedArtifactAttached>true</shadedArtifactAttached>
+					<artifactSet>
+						<includes>
+							<include>*:*:jar:</include>
+						</includes>
+						<excludes>
+							<exclude>org.springframework:spring-jcl:jar:</exclude>
+						</excludes>
+					</artifactSet>
 					<filters>
 						<filter>
 							<artifact>*:*</artifact>
 							<excludes>
-								<exclude>module-info.class</exclude>
-								<exclude>META-INF/**/*</exclude>
+								<exclude>**/module-info.class</exclude>
+								<exclude>META-INF/DEPENDENCIES</exclude>
+								<exclude>META-INF/LICENSE*</exclude>
+								<exclude>META-INF/license*</exclude>
+								<exclude>META-INF/NOTICE*</exclude>
+								<exclude>META-INF/notice*</exclude>
+								<exclude>META-INF/maven/**/*</exclude>
+								<exclude>META-INF/MANIFEST.MF</exclude>
+								<exclude>META-INF/spring*</exclude>
 							</excludes>
 						</filter>
 					</filters>
+					<transformers>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>${main.class}</mainClass>
+							<manifestEntries>
+								<Implementation-Version>${project.version}</Implementation-Version>
+							</manifestEntries>
+						</transformer>
+					</transformers>
 				</configuration>
 			</plugin>
 			<plugin>
