Implemented datapoint rulesets

--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
 	</profiles>
 
 	<properties>
-		<revision>1.1.4</revision>
+		<revision>1.1.5-SNAPSHOT</revision>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
