--- a/vtl-parser/pom.xml
+++ b/vtl-parser/pom.xml
@@ -57,7 +57,6 @@
 			<plugin>
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr4-maven-plugin</artifactId>
-				<version>${antlr4.version}</version>
 				<executions>
 					<execution>
 						<id>java</id>
@@ -74,7 +73,7 @@
 						</goals>
 						<configuration>
 							<arguments>
-								<argument>-Dlanguage=JavaScript</argument>
+								<argument>-Dlanguage=TypeScript</argument>
 							</arguments>
 							<outputDirectory>${project.build.directory}/generated-sources/js</outputDirectory>
 						</configuration>
