--- a/pom.xml
+++ b/pom.xml
@@ -162,8 +162,8 @@
 		<jaxb.version>4.0.2</jaxb.version>
 		<jaxb.runtime.version>4.0.5</jaxb.runtime.version>
 		<thymeleaf.version>3.1.2.RELEASE</thymeleaf.version>
-		<node.version>v10.20.1</node.version>
-		<antlr4.version>4.8</antlr4.version>
+		<node.version>v20.12.0</node.version>
+		<antlr4.version>4.13.1</antlr4.version>
 		<io.sdmx.version>1.0.57</io.sdmx.version>
 		<spring.version>5.3.31</spring.version>
 		<guava.version>30.1.1-jre</guava.version>
@@ -246,27 +246,6 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>jakarta.activation</groupId>
-				<artifactId>jakarta.activation-api</artifactId>
-				<version>2.0.1</version>
-			</dependency>
-			<dependency>
-				<groupId>org.antlr</groupId>
-				<artifactId>antlr4-runtime</artifactId>
-				<version>${antlr4.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>jakarta.xml.bind</groupId>
-				<artifactId>jakarta.xml.bind-api</artifactId>
-				<version>${jaxb.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.glassfish.jaxb</groupId>
-				<artifactId>jaxb-runtime</artifactId>
-				<version>${jaxb.runtime.version}</version>
-				<scope>runtime</scope>
-			</dependency>
-			<dependency>
 				<groupId>it.bancaditalia.oss.vtl</groupId>
 				<artifactId>vtl-api</artifactId>
 				<version>${project.version}</version>
@@ -324,6 +303,13 @@
 			</dependency>
 			<dependency>
 				<groupId>it.bancaditalia.oss.vtl</groupId>
+				<artifactId>vtl-parser</artifactId>
+				<classifier>parser-js</classifier>
+				<version>${project.version}</version>
+				<type>zip</type>
+			</dependency>
+			<dependency>
+				<groupId>it.bancaditalia.oss.vtl</groupId>
 				<artifactId>vtl-samples</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -336,6 +322,27 @@
 				<groupId>it.bancaditalia.oss.vtl</groupId>
 				<artifactId>vtl-spark</artifactId>
 				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>jakarta.activation</groupId>
+				<artifactId>jakarta.activation-api</artifactId>
+				<version>2.0.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.antlr</groupId>
+				<artifactId>antlr4-runtime</artifactId>
+				<version>${antlr4.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>jakarta.xml.bind</groupId>
+				<artifactId>jakarta.xml.bind-api</artifactId>
+				<version>${jaxb.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.jaxb</groupId>
+				<artifactId>jaxb-runtime</artifactId>
+				<version>${jaxb.runtime.version}</version>
+				<scope>runtime</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
@@ -658,6 +665,11 @@
 					<version>${resources.version}</version>
 				</plugin>
 				<plugin>
+					<groupId>org.antlr</groupId>
+					<artifactId>antlr4-maven-plugin</artifactId>
+					<version>${antlr4.version}</version>
+				</plugin>
+				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
 					<version>${jacoco.version}</version>
@@ -910,8 +922,7 @@
 					<tempWebappDirectory>${project.build.directory}/site</tempWebappDirectory>
 					<asciidoc>
 						<attributes>
-							<snippets>
-								${project.basedir}/vtl-bundles/vtl-rest/target/generated-snippets</snippets>
+							<snippets>${project.basedir}/vtl-bundles/vtl-rest/target/generated-snippets</snippets>
 						</attributes>
 					</asciidoc>
 				</configuration>
