--- a/pom.xml
+++ b/pom.xml
@@ -140,8 +140,8 @@
 		<gpg.version>3.1.0</gpg.version>
 
 		<site.version>3.12.1</site.version>
-		<reflow.version>2.3.4</reflow.version>
-		<doxia.markdown.version>1.12.0</doxia.markdown.version>
+		<docs-skin.version>2.3.2</docs-skin.version>
+		<doxia.markdown.version>1.11.1</doxia.markdown.version>
 
 		<slf4j.version>2.0.12</slf4j.version>
 		<log4j.version>2.23.1</log4j.version>
@@ -163,7 +163,7 @@
 		<thymeleaf.version>3.1.2.RELEASE</thymeleaf.version>
 		<node.version>v20.12.2</node.version>
 		<antlr4.version>4.9.3</antlr4.version>
-		<io.sdmx.version>1.0.57</io.sdmx.version>
+		<io.sdmx.version>1.1.1</io.sdmx.version>
 		<spring.version>5.3.31</spring.version>
 		<guava.version>30.1.1-jre</guava.version>
 
@@ -194,8 +194,7 @@
 							<report>dependencies</report>
 							<report>dependency-convergence</report>
 							<report>dependency-info</report>
-							<report>dependency-management</report>
-							<report>index</report>
+							<!-- report>dependency-management</!report -->
 							<report>issue-management</report>
 							<report>licenses</report>
 							<report>modules</report>
@@ -582,14 +581,9 @@
 					<version>${site.version}</version>
 					<dependencies>
 						<dependency>
-							<groupId>io.github.devacfr.maven.skins</groupId>
-							<artifactId>reflow-velocity-tools</artifactId>
-							<version>${reflow.version}</version>
-						</dependency>
-						<dependency>
-							<groupId>org.apache.maven.doxia</groupId>
-							<artifactId>doxia-module-markdown</artifactId>
-							<version>${doxia.markdown.version}</version>
+							<groupId>com.bernardomg.maven.skins</groupId>
+							<artifactId>docs-maven-skin</artifactId>
+							<version>${docs-skin.version}</version>
 						</dependency>
 						<dependency>
 							<groupId>org.eclipse.jetty</groupId>
@@ -836,31 +830,6 @@
 							<owner>${project.organization.name}</owner>
 						</properties>
 					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.tycho</groupId>
-					<artifactId>tycho-maven-plugin</artifactId>
-					<version>${tycho.version}</version>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.tycho</groupId>
-					<artifactId>tycho-compiler-plugin</artifactId>
-					<version>${tycho.version}</version>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.tycho</groupId>
-					<artifactId>tycho-p2-publisher-plugin</artifactId>
-					<version>${tycho.version}</version>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.tycho</groupId>
-					<artifactId>tycho-packaging-plugin</artifactId>
-					<version>${tycho.version}</version>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.tycho</groupId>
-					<artifactId>target-platform-configuration</artifactId>
-					<version>${tycho.version}</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
