--- a/vtl-bundles/pom.xml
+++ b/vtl-bundles/pom.xml
@@ -74,4 +74,17 @@
 		<module>vtl-bundle-deps</module>
 		<module>vtl-coverage</module>
 	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>flatten-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
