--- a/vtl-bundles/vtl-r/pom.xml
+++ b/vtl-bundles/vtl-r/pom.xml
@@ -42,4 +42,17 @@
 		<module>vtl-java2r</module>
 		<module>RVTL</module>
 	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>flatten-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
