--- a/vtl-envs/pom.xml
+++ b/vtl-envs/pom.xml
@@ -73,4 +73,17 @@
 		<module>vtl-envbase</module>
 		<module>vtl-envsamples</module>
 	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>flatten-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
