--- a/vtl-parsers/pom.xml
+++ b/vtl-parsers/pom.xml
@@ -55,4 +55,18 @@
 	<modules>
 		<module>vtl-parser</module>
 	</modules>
+
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>flatten-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
