Preparing for VTL 2.1

--- a/pom.xml
+++ b/pom.xml
@@ -347,6 +347,11 @@
 			</dependency>
 			<dependency>
 				<groupId>it.bancaditalia.oss.vtl</groupId>
+				<artifactId>vtl-metadb</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>it.bancaditalia.oss.vtl</groupId>
 				<artifactId>vtl-parser</artifactId>
 				<version>${project.version}</version>
 			</dependency>
